feat: Add normal schedule card service v2
