# WaplMath/src/main/java/com/tmax/WaplMath/Recommend/controller/schedule/ScheduleControllerV2.java
@@ -15,48 +15,44 @@ import org.springframework.web.bind.annotation.RestController;
 import com.tmax.WaplMath.Common.util.auth.JWTUtil;
 import com.tmax.WaplMath.Recommend.config.RecommendConstants;
 import com.tmax.WaplMath.Recommend.dto.schedule.ExamScheduleCardDTO;
-import com.tmax.WaplMath.Recommend.dto.schedule.NormalScheduleCardDTOV1;
-import com.tmax.WaplMath.Recommend.service.schedule.ScheduleServiceBaseV1;
+import com.tmax.WaplMath.Recommend.dto.schedule.NormalScheduleCardDTOV2;
+import com.tmax.WaplMath.Recommend.service.schedule.ScheduleServiceBaseV2;
 
-/**
- * Learning schedule recommendation api controller (version 0)
- * @author Sangheon Lee
- */
 @RestController
 @CrossOrigin(origins = "*", allowedHeaders = "*")
-@RequestMapping(path= RecommendConstants.apiPrefix + "/v0")
-public class ScheduleControllerV0 {
+@RequestMapping(path = RecommendConstants.apiPrefix + "/v2")
+public class ScheduleControllerV2 {
 
 	private final Logger logger = LoggerFactory.getLogger(this.getClass().getSimpleName());
-	
-	@Autowired
-	@Qualifier("ScheduleServiceV0")
-	private ScheduleServiceBaseV1 scheduleMvc;
 
-	@GetMapping(value = "/examschedulecard", produces = "application/json; charset=utf-8")
-	ResponseEntity<Object> getExamScheduleCard(@RequestHeader("token") String token) {
-		String userId = JWTUtil.getJWTPayloadField(token, "userID");
-		logger.info("userId: "+userId);
-		ExamScheduleCardDTO examScheduleCard = scheduleMvc.getExamScheduleCard(userId);
-		System.out.println("version 0");
-		return new ResponseEntity<>(examScheduleCard, HttpStatus.OK);
-	}
+	@Autowired
+	@Qualifier("ScheduleServiceV2")
+	private ScheduleServiceBaseV2 scheduleMvc;
 
 	@GetMapping(value = "/normalschedulecard", produces = "application/json; charset=utf-8")
 	ResponseEntity<Object> getNormalScheduleCard(@RequestHeader("token") String token) {
 		String userId = JWTUtil.getJWTPayloadField(token, "userID");
-		logger.info("userId: "+userId);
-		NormalScheduleCardDTOV1 normalScheduleCard = scheduleMvc.getNormalScheduleCard(userId);
-		System.out.println("version 0");
+		logger.info("userId: " + userId);
+		NormalScheduleCardDTOV2 normalScheduleCard = scheduleMvc.getNormalScheduleCard(userId);
+		logger.info("version 2");
 		return new ResponseEntity<>(normalScheduleCard, HttpStatus.OK);
 	}
-	
+
+	@GetMapping(value = "/examschedulecard", produces = "application/json; charset=utf-8")
+	ResponseEntity<Object> getExamScheduleCard(@RequestHeader("token") String token) {
+		String userId = JWTUtil.getJWTPayloadField(token, "userID");
+		logger.info("userId: " + userId);
+		ExamScheduleCardDTO examScheduleCard = scheduleMvc.getExamScheduleCard(userId);
+		logger.info("version 2");
+		return new ResponseEntity<>(examScheduleCard, HttpStatus.OK);
+	}
+
 	@GetMapping(value = "/normalschedulecard/dummy", produces = "application/json; charset=utf-8")
 	ResponseEntity<Object> getNormalScheduleCardDummy(@RequestHeader("token") String token) {
 		String userId = JWTUtil.getJWTPayloadField(token, "userID");
-		logger.info("userId: "+userId);
-		NormalScheduleCardDTOV1 normalScheduleCard = scheduleMvc.getNormalScheduleCardDummy(userId);
-		System.out.println("version 0");
+		logger.info("userId: " + userId);
+		NormalScheduleCardDTOV2 normalScheduleCard = scheduleMvc.getNormalScheduleCardDummy(userId);
+		System.out.println("version 2");
 		return new ResponseEntity<>(normalScheduleCard, HttpStatus.OK);
 	}
 }
